<resources>
    <string name="app_name">Go4lunch</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_maps">Map</string>

    <string name="facebook_app_id">518584183134985</string>
    <string name="fb_login_protocol_scheme">fb518584183134985</string>
    <string name="facebook_client_token">277b05b1ad0db2de783ee5a0deef9750</string>
    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="bottom_navigation_menu_landscape">WorkMates</string>
    <string name="bottom_navigation_menu_logos">ListView</string>
    <string name="bottom_navigation_menu_android">MapView</string>
    <string name="hello">hello</string>
    <!-- NAV RESTAURANT -->
    <string name="navigation_call">Call</string>
    <string name="navigation_like">Like</string>
    <string name="navigation_website">Website</string>
    <string name="coworker_restaurant">is eating at  </string>
    <!-- NOTIFICATION -->
    <string name="notifcation">Restaurant chosen</string>
    <string name="coworkerChoice">hasn\'t decided yet</string>
    <string name="coworkerEat">is eating at </string>
    <string name="notif_on">notif on </string>
    <string name="joining">joining </string>



    <!-- Button Choosen restaurant -->
    <string name="Like">LIKE</string>
    <string name="Call">CALL</string>
    <string name="Website">WEBSITE </string>


    <!-- Identification -->
    <string name="create_account">Create your account </string>
    <string name="email">email </string>
    <string name="password">password </string>
    <string name="or">or </string>
    <string name="sign_in">Sign_in </string>
    <string name="sign_in_nogoogle">sign in by mail </string>
    <string name="sign_twitter">Twitter </string>
    <string name="notif_off">notification off </string>


    <!-- Facebook -->
    <string name="facebook_application_id" translatable="false">518584183134985</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb518584183134985</string>

    <string name="facebook_key">ebcb9e8942af19cd84b7ac0edc35d74a</string>
    <string name="apiKey">AIzaSyDIC9wuMhHNNjFIr6UZfb64h1Rmauaz7hw</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_retro">location</string>

    <!-- NAV DRAWER -->
    <string name="lunch_restaurant">YOUR LUNCH</string>
    <string name="setings">SETTINGS</string>
    <string name="logout">LOGOUT</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps2">Map</string>


</resources>