<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_call"
        android:enabled="true"
        android:icon="@drawable/icon_call"
        android:title="@string/bottom_navigation_menu_android"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_like"
        android:enabled="true"
        android:icon="@drawable/star_icon"
        android:title="@string/bottom_navigation_menu_logos"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_website"
        android:enabled="true"
        android:icon="@drawable/icon_web"
        android:title="@string/bottom_navigation_menu_landscape"
        app:showAsAction="ifRoom" />
</menu>
